Fix: hero content alignment and NavBar tongle button

--- a/src/css/NavBarHero.css
+++ b/src/css/NavBarHero.css
@@ -52,8 +52,10 @@
   background-color: #1e1f22;
   border-radius: 8px;
   color: #fff;
-  padding: 8px 12px;
+  padding: 2px 5px 2px 12px;
   border: none;
+  font-size: 24px;
+  font-weight: normal;
 }
 
 /* 03.Hero */
@@ -82,7 +84,7 @@
 .hero-episodes .container {
   position: relative;
   z-index: 2;
-  text-align: center;
+  text-align: left;
 }
 
 .hero-episodes .btn {
